<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">eID</string>
    <string name="loader_wait_message">We are looking for your data, it might take a moment.</string>
    <string name="error">Something went wrong</string>
    <string name="error_loading_error">Sorry, it seems something went wrong. Please try again.</string>
    <string name="error_server_error_short">Server error</string>
    <string name="error_internal_error_short">Internal error</string>
    <string name="error_server_error">Error while receiving data from the server, please try again later</string>
    <string name="error_network_error_short">Network error</string>
    <string name="error_network_error">Error during network request, please try again later</string>
    <string name="error_network_not_available">No internet connection</string>
    <string name="error_network_not_available_description">Connect to the Internet and try again</string>
    <string name="error_invalid_format">Invalid format</string>
    <string name="error_not_enough_characters">Not enough characters in the field.</string>
    <string name="error_cannot_be_empty">This field cannot be empty.</string>
    <string name="error_password_must_contain_only_numbers">Password must contain only numbers</string>
    <string name="must_contain_only_numbers">Only numbers are allowed here</string>
    <string name="error_empty_state_tile">Nothing found</string>
    <string name="error_empty_state_description">Refresh the screen if content should be present</string>
    <string name="error_no_consent_to_share_data">No consent to share data</string>
    <string name="error_pin_code_not_setup">Pin code not setup</string>
    <string name="error_user_not_setup_correct">User not setup</string>
    <string name="error_user_is_not_identified">User is not identified</string>
    <string name="error_user_name_not_found">User name not found</string>
    <string name="error_user_email_not_found">User email not found</string>
    <string name="error_user_phone_not_found">User phone not found</string>
    <string name="error_user_personal_identification_number_not_found">User personal identification number not found</string>
    <string name="error_request_is_being_processed">The request is being processed, please wait and click update</string>
    <string name="error_server_fetch_information">We could not fetch the necessary information</string>
    <string name="error_api_general">An error has occurred. Try again. (%s)</string>
    <string name="error_field_required">The field is required</string>
    <string name="error_valid_email_format">Invalid email format</string>
    <string name="error_names_uppercase">The name must begin with uppercase character</string>
    <string name="error_field_symbols_length">The field must be at least %s symbols</string>
    <string name="error_valid_phone_number">Enter a valid phone number</string>
    <string name="error_valid_password_format">The password needs to have at least 8 characters with 1 upper case, 1 lower case, 1 number and 1 special character.</string>
    <string name="error_password_mismatch">Passwords don\'t match</string>
    <string name="error_names_combination">You must enter a combination of first name and middle name or first name and last name</string>
    <string name="error_invalid_egn">Invalid EGN</string>
    <string name="error_invalid_lnch">Invalid LNCh</string>
    <string name="error_invalid_personal_identifier_format">Invalid personal identifier format</string>
    <string name="error_invalid_personal_identifier">Invalid personal identifier</string>
    <string name="error_card_chip_unsupported">The card with this number does not support electronic identity</string>
    <string name="error_pin_code_mismatch">Pin code mismatch</string>
    <string name="error_pin_code_length">The PIN code must be %s digits</string>
    <string name="error_invalid_bulstat">Invalid BULSTAT</string>
    <string name="error_value_already_used">The given value is already used</string>
    <string name="error_personal_identifier_already_used">The given personal identifier is already used</string>
    <string name="error_empowerment_self">You can not empower yourself</string>
    <string name="error_empowerment_self_as_representative">You can not empower yourself when you are the only legal representative</string>
    <string name="error_pin_code_incorrect">PIN is incorrect. Number of attempts left: %s</string>
    <string name="error_biometrics_enable">Could not enable biometrics</string>
    <string name="error_biometrics_not_available">Biometrics not available</string>
    <string name="error_biometrics_system">Biometric system error</string>
    <string name="error_blocked_title">Entrance blocked</string>
    <string name="error_blocked_description">Unlock in %s seconds</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="apply">Apply</string>
    <string name="retry" tools:override="true">Retry</string>
    <string name="reload">Reload</string>
    <string name="next">Next</string>
    <string name="proceed">Proceed</string>
    <string name="start">Start</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="remove">Remove</string>
    <string name="share">Share</string>
    <string name="select">Select</string>
    <string name="invite">Invite</string>
    <string name="delete">Delete</string>
    <string name="skip">Skip</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="view_all">View All</string>
    <string name="see_all">See All</string>
    <string name="all">All</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="edit_data">Edit data</string>
    <string name="verify">Verify</string>
    <string name="done">Done</string>
    <string name="bullet">•</string>
    <string name="confirm">Confirm</string>
    <string name="continue_label">Continue</string>
    <string name="optional">Optional</string>
    <string name="unknown">Unknown</string>
    <string name="need_help">Need help?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="oops">Oops</string>
    <string name="oops_with_dots">Oops…</string>
    <string name="sorry">Sorry</string>
    <string name="logout">Logout</string>
    <string name="try_again">Try again</string>
    <string name="ok" tools:override="true">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="update">Update</string>
    <string name="wait">Please wait</string>
    <string name="please_select">Please select a value</string>
    <string name="please_input">Please enter a value</string>
    <string name="information">Information</string>
    <string name="certificate_stop">Stop</string>
    <string name="certificate_resume">Resume</string>
    <string name="certificate_change_pin">Change PIN</string>
    <string name="certificate_revoke">Revoke</string>
    <string name="application_payment">Payment</string>
    <string name="mobile_applicatipon">Mobile application</string>
    <string name="identity_card">Bulgarian identity card with chip</string>
    <string name="egn">EGN</string>
    <string name="lnch">LNCH</string>
    <string name="certificate">Certificate</string>
    <string name="not_specified">Not specified</string>
    <string name="send">Send</string>
    <string name="no_value">No value</string>
    <string name="no_search_results">No search results</string>
    <string name="required_sign">*</string>
    <string name="sign">Sign</string>
    <string name="begin">Home</string>
    <string name="more">More</string>
    <string name="filters">Filters</string>
    <string name="sort_by_with_dots">Sort by:</string>
    <string name="authentication_type">Authentication type</string>
    <string name="signing_type">Sign</string>
    <string name="select_all">Select all</string>
    <string name="unspecified">Unspecified</string>
    <string name="apply_filters">Apply filters</string>
    <string name="clear_filters">Clear</string>
    <string name="pin_creation_message">Do you want to create a PIN code to protect your profile?</string>
    <string name="channel_name">EID</string>
    <string name="channel_description">Notifications from the EID application</string>
    <string name="warning_label">Warning</string>
    <string name="notifications_window_label">In order for application to work properly, you must allow notifications. Current notification: %s</string>
    <string name="settings_label">Settings</string>
    <string name="passcode_btn_1">1</string>
    <string name="passcode_btn_2">2</string>
    <string name="passcode_btn_3">3</string>
    <string name="passcode_btn_4">4</string>
    <string name="passcode_btn_5">5</string>
    <string name="passcode_btn_6">6</string>
    <string name="passcode_btn_7">7</string>
    <string name="passcode_btn_8">8</string>
    <string name="passcode_btn_9">9</string>
    <string name="passcode_btn_0">0</string>
    <string name="permissions_modal_title">Access required</string>
    <string name="permissions_modal_description">Please adjust your settings to allow GTWorld access your %s, without it you cannot proceed.</string>
    <string name="permissions_modal_step_1">Turn on «%s» in settings.</string>
    <string name="permissions_modal_step_2">After that, go back to the app.</string>
    <string name="permissions_modal_open_settings">Open settings</string>
    <string name="permissions_contacts">Contacts</string>
    <string name="permissions_camera">Camera</string>
    <string name="permissions_location">Location</string>
    <string name="biometric_error_title">Biometric error</string>
    <string name="biometric_error_description">User identification error, you may have unlocked the device using an alternative method, unlock the device using your fingerprint and try again</string>
    <string name="lorem_ipsum_size_1">Lorem ipsum</string>
    <string name="empowerments_intro_title">Empowerments</string>
    <string name="empowerments_intro_from_me_title">From me</string>
    <string name="empowerments_intro_from_me_subtitle">Authorizer</string>
    <string name="empowerments_intro_to_me_title">To me</string>
    <string name="empowerments_intro_to_me_subtitle">Authorized person</string>
    <string name="empowerments_intro_create_button_title">Create new empowerment</string>
    <string name="journals_intro_title">History of events</string>
    <string name="journals_intro_from_me_title">From me</string>
    <string name="journals_intro_to_me_title">To me</string>
    <string name="journals_intro_from_me_subtitle">Events from my actions</string>
    <string name="journals_intro_to_me_subtitle">Events from internal checks or other systems</string>
    <string name="eim_intro_title">Managing electronic identity certificates</string>
    <string name="eim_intro_applications_title">Applications</string>
    <string name="eim_intro_applications_subtitle">Applications for electronic identity certificates</string>
    <string name="eim_intro_certificates_title">Certificates</string>
    <string name="eim_intro_certificates_subtitle">History of certificates for electronic identity</string>
    <string name="eim_intro_create_certificate_button_title">Request new certificate</string>
    <string name="empowerment_withdrawal_bottom_sheet_title">Empowerment Withdrawal</string>
    <string name="empowerment_withdrawal_bottom_sheet_message">By taking this action, you will invalidate your empowerment! Withdrawal takes effect immediately after processing and does not cancel actions previously taken with the given authorization. Do you wish to continue?</string>
</resources>